--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - img/first_page.png
+    - img/second_page.png
+    - img/third_page.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
